--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">This is rude!</p>
+                <p class="event received">Hello Dad!</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
